--- a/public/06-service.html
+++ b/public/06-service.html
@@ -337,6 +337,49 @@
 				</div>
 			</div>
 			<!-- end sOpportunities-->
+			<!-- start sFocus-->
+			<section class="sFocus section bg-white section section--vh" id="sFocus">
+				<div class="container">
+					<div class="section-title">
+						<h2>Фокус на потребностях заказчика</h2>
+					</div>
+					<div class="row">
+								<div class="col-md-6">
+									<div class="sFocus__item">
+										<div class="sFocus__num">1
+										</div>
+										<div class="sFocus__txt">Единая точка входа для обращений, персональный сервис-менеджер. Поддержка пользователей в&nbsp;режиме горячей линии&nbsp;&mdash; единый телефон, e-mail и&nbsp;Service Desk (возможность использования интерфейса SAP Solution Manager)
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="sFocus__item">
+										<div class="sFocus__num">2
+										</div>
+										<div class="sFocus__txt">Объективная оценка качества услуг. Наличие норм и&nbsp;метрик, позволяющих измерить уровень и&nbsp;качество предоставления услуг
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="sFocus__item">
+										<div class="sFocus__num">3
+										</div>
+										<div class="sFocus__txt">Доступность и&nbsp;гарантия надежности сервиса. Наличие внешних спецификаций услуг, внедрение методологии, инфраструктура сопровождения.
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="sFocus__item">
+										<div class="sFocus__num">4
+										</div>
+										<div class="sFocus__txt">Гибкий подход к&nbsp;оказанию услуг и&nbsp;возможность оптимизации сервисной модели на&nbsp;основании фактической статистики
+										</div>
+									</div>
+								</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sFocus-->
 			<!-- start sForm-->
 			<section class="sForm section bg-dark section section--vh" id="sForm">
 				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
