edit share mixin 2

--- a/public/13-article.html
+++ b/public/13-article.html
@@ -336,25 +336,13 @@
 					<div class="share-block">
 						<p>Поделиться</p>
 						<div class="soc">
-							<a class="soc__item" href="#" target="_blank">
-								<svg class="icon icon-vk2 ">
-									<use xlink:href="img/svg/sprite.svg#vk2"></use>
-								</svg>
+							<a class="soc__item" href="#" target="_blank"><img src="img/svg/vk2.svg" alt=""/>
 							</a>
-							<a class="soc__item" href="#" target="_blank">
-								<svg class="icon icon-in2 ">
-									<use xlink:href="img/svg/sprite.svg#in2"></use>
-								</svg>
+							<a class="soc__item" href="#" target="_blank"><img src="img/svg/in2.svg" alt=""/>
 							</a>
-							<a class="soc__item" href="#" target="_blank">
-								<svg class="icon icon-whatsapp2 ">
-									<use xlink:href="img/svg/sprite.svg#whatsapp2"></use>
-								</svg>
+							<a class="soc__item" href="#" target="_blank"><img src="img/svg/whatsapp2.svg" alt=""/>
 							</a>
-							<a class="soc__item" href="#" target="_blank">
-								<svg class="icon icon-telegram2 ">
-									<use xlink:href="img/svg/sprite.svg#telegram2"></use>
-								</svg>
+							<a class="soc__item" href="#" target="_blank"><img src="img/svg/telegram2.svg" alt=""/>
 							</a>
 						</div>
 					</div>
