--- a/public/06-service.html
+++ b/public/06-service.html
@@ -380,6 +380,43 @@
 				</div>
 			</section>
 			<!-- end sFocus-->
+			<!-- start sService-->
+			<section class="sService section bg-white" id="sService">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>Услуги</h2>
+					</div>
+					<div class="row">
+								<div class="col-md">
+									<div class="sService__item">
+										<div class="sService__title">Заказная разработка для систем SAP
+										</div>
+										<div class="sService__caption">Автоматизация процессов регистрации, квалификации, сегментации, а&nbsp;также контроль эффективности поставщиков. Управление данными о&nbsp;поставщиках, их&nbsp;KPI, финансовой документацией, сертификатами и&nbsp;прочей информацией.
+										</div>
+										<a class="sService__link" href="#"><span>Подробнее</span>
+											<svg class="icon icon-arrow-right-link ">
+												<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+								<div class="col-md">
+									<div class="sService__item">
+										<div class="sService__title">Прикладная разработка
+										</div>
+										<div class="sService__caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto aliquam tenetur accusamus! Illum quod eius praesentium quisquam quis totam corporis necessitatibus unde dolorum? Commodi, dolore!
+										</div>
+										<a class="sService__link" href="#"><span>Подробнее</span>
+											<svg class="icon icon-arrow-right-link ">
+												<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sService-->
 			<!-- start sForm-->
 			<section class="sForm section bg-dark section section--vh" id="sForm">
 				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
