--- a/public/06-service.html
+++ b/public/06-service.html
@@ -379,6 +379,19 @@
 								</div>
 					</div>
 				</div>
+				<div class="share-block">
+					<p>Поделиться</p>
+					<div class="soc">
+						<a class="soc__item" href="#" target="_blank"><img src="img/svg/vk2.svg" alt=""/>
+						</a>
+						<a class="soc__item" href="#" target="_blank"><img src="img/svg/in2.svg" alt=""/>
+						</a>
+						<a class="soc__item" href="#" target="_blank"><img src="img/svg/whatsapp2.svg" alt=""/>
+						</a>
+						<a class="soc__item" href="#" target="_blank"><img src="img/svg/telegram2.svg" alt=""/>
+						</a>
+					</div>
+				</div>
 			</section>
 			<!-- end sFocus-->
 			<!-- start sService-->
