--- a/public/13-article.html
+++ b/public/13-article.html
@@ -275,7 +275,7 @@
 				</div>
 				<div class="container container--large mb-32">
 					<blockquote>
-						<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat.</h4>
+						<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</h4>
 						<cite>Алексей Литвин<span>Директор</span></cite>
 					</blockquote>
 				</div>
@@ -332,7 +332,7 @@
 					<h5>H5 Header two line words description</h5>
 					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
-				<div class="container container--small mb-32">
+				<div class="container container--small pb-32">
 					<div class="share-block">
 						<p>Поделиться</p>
 						<div class="soc">
@@ -349,6 +349,45 @@
 				</div>
 			</section>
 			<!-- end sContent-->
+			<!-- start sService-->
+			<section class="sService sService--2 section" id="sService">
+				<div class="container container--small">
+					<div class="row">
+								<div class="col-md">
+									<a class="sService__item" href="#">
+										<div class="sService__link sService__link--left d-none d-md-inline-block">
+											<svg class="icon icon-arrow-left-link ">
+												<use xlink:href="img/svg/sprite.svg#arrow-left-link"></use>
+											</svg>
+										</div>
+										<div class="sService__link sService__link--left d-inline-block d-md-none">
+											<svg class="icon icon-arrow-right-link ">
+												<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+											</svg>
+										</div>
+										<div class="sService__title">12 сентября 2022
+										</div>
+										<div class="sService__caption">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.
+										</div>
+									</a>
+								</div>
+								<div class="col-md">
+									<a class="sService__item" href="#">
+										<div class="sService__link sService__link--right">
+											<svg class="icon icon-arrow-right-link ">
+												<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+											</svg>
+										</div>
+										<div class="sService__title">6 сентября 2022
+										</div>
+										<div class="sService__caption">Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.
+										</div>
+									</a>
+								</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sService-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
