--- a/public/13-article-2.html
+++ b/public/13-article-2.html
@@ -162,10 +162,6 @@
 				</div>
 			</div>
 			<!--  мобильное меню-->
-			<video class="bg-video" preload="auto" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/poster.webp">
-				<source src="video/video.webm" type="video/webm">
-				<source src="video/video.mp4" type="video/mp4">
-			</video>
 			<!-- start top-nav-->
 			<div class="top-nav fixed">
 				<div class="row">
@@ -196,6 +192,35 @@
 				</div>
 			</div>
 			<!-- end top-nav-->
+			<!-- start headerBlock-->
+			<div class="headerBlock headerBlock--artical bg-wrap section bg-dark" id="headerBlock">
+				<div class="headerBlock__row row">
+					<div class="col-md-6 order-2 order-md-1">
+						<div class="headerBlock__img-wrap"><img class="object-fit-js" src="img/article-img-1.jpg" alt="" loading="lazy"/>
+						</div>
+						<div class="headerBlock__tags d-flex d-md-none"><a href="#">#жизнь компании</a><a href="#">#новости команды</a>
+						</div>
+					</div>
+					<div class="headerBlock__col col-md-6 text-center bg-wrap order-1 order-md-2">
+						<video class="bg-video" preload="auto" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/poster.webp">
+							<source src="video/video.webm" type="video/webm"/>
+							<source src="video/video.mp4" type="video/mp4"/>
+						</video>
+						<a class="headerBlock__back mb-32" href="#">
+							<svg class="icon icon-chevron-left ">
+								<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
+							</svg>Вернуться в пресс-центр
+						</a>
+						<div class="headerBlock__content">
+							<div class="h6">12 сентября 2022</div>
+							<h1>SAPRUN вошёл в TOP-5 крупнейших российских аутсорсеров поддержки решений SAP-2020.</h1>
+							<p>online</p><a class="btn btn-outline-primary" href="#">Хочу пойти</a>
+						</div>
+						<div class="headerBlock__tags d-none d-md-flex"><a href="#">#жизнь компании</a><a href="#">#новости команды</a>
+						</div>
+					</div>
+				</div>
+			</div>
 			<!-- start sContent-->
 			<section class="sContent section bg-white section section--vh" id="sContent">
 				<div class="container container--small mb-56">
