--- a/public/09-subspecies-services.html
+++ b/public/09-subspecies-services.html
@@ -196,9 +196,9 @@
 			<div class="headerBlock headerBlock--artical bg-wrap section bg-dark" id="headerBlock">
 				<div class="headerBlock__row row">
 					<div class="col-md-6 order-2 order-md-1">
-						<div class="headerBlock__img-wrap"><img class="object-fit-js" src="img/article-img-1.jpg" alt="" loading="lazy"/>
+						<div class="headerBlock__img-wrap"><img class="object-fit-js" src="img/article-img-4.jpg" alt="" loading="lazy"/>
 						</div>
-						<div class="headerBlock__tags d-flex d-md-none"><a href="#">#жизнь компании</a><a href="#">#новости команды</a>
+						<div class="headerBlock__tags d-flex d-md-none"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
 						</div>
 					</div>
 					<div class="headerBlock__col col-md-6 text-center bg-wrap order-1 order-md-2">
@@ -209,134 +209,71 @@
 						<a class="headerBlock__back mb-32" href="#">
 							<svg class="icon icon-chevron-left ">
 								<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
-							</svg>Вернуться в пресс-центр
+							</svg>Вернуться к услугам
 						</a>
-						<div class="headerBlock__content">
-							<div class="h6">12 сентября 2022</div>
-							<h1>SAPRUN вошёл в TOP-5 крупнейших российских аутсорсеров поддержки решений SAP-2020.</h1>
-							<p>online</p><a class="btn btn-outline-primary" href="#">Хочу пойти</a>
+						<div class="headerBlock__content headerBlock__content--2">
+							<h1>Управление поставщиками</h1>
+							<p>Автоматизация процессов регистрации, квалификации, сегментации, а&nbsp;также контроль эффективности поставщиков. Управление данными о&nbsp;поставщиках, их&nbsp;KPI, финансовой документацией, сертификатами и&nbsp;прочей информацией.</p>
 						</div>
-						<div class="headerBlock__tags d-none d-md-flex"><a href="#">#жизнь компании</a><a href="#">#новости команды</a>
+						<div class="headerBlock__tags d-none d-md-flex"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- start sContent-->
 			<section class="sContent section bg-white section section--vh" id="sContent">
 				<div class="container container--small mb-56">
-					<h4>Donec pellentesque efficitur dui, id dictum ex aliquam id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a sed est.</h4>
-					<p class="fw-light mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
-				</div>
-				<div class="container container--small mb-56">
-					<h2>Fusce sed auctor nibh</h2>
-					<p class="fw-light mb-0">Quisque ut&nbsp;consectetur risus, in&nbsp;rhoncus urna. Aenean pellentesque, velit id&nbsp;suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et&nbsp;justo pulvinar tincidunt et&nbsp;vel enim. Cras at&nbsp;nulla massa. Nulla metus enim, consequat eu&nbsp;ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
-				</div>
-				<div class="container container--small mb-56">
-					<ul class="sContent__default-list">
-						<li>Proin mollis libero quis lacus posuere, sit amet varius nunc fringilla</li>
-						<li>In posuere, augue eget ornare congue, eros ex bibendum
-							<ul>
-								<li>In finibus vitae lorem nec scelerisque</li>
-								<li>Phasellus eu aliquam ex. Integer facilisis velit lacus, vel venenatis est aliquam sit amet</li>
-							</ul>
-						</li>
-						<li>Proin suscipit placerat turpis</li>
+					<h3 class="sContent__list-title">Возможности решения
+					</h3>
+					<ul class="sContent__list">
+						<li>Регистрация, квалификация и&nbsp;дисквалификация поставщиков</li>
+						<li>Регистрация, квалификация и&nbsp;дисквалификация поставщиков</li>
+						<li>Процесс классификации поставщиков по&nbsp;товарам, регионам и&nbsp;бизнес-подразделениям на&nbsp;основе сегментационной матрицы</li>
+						<li>Фиксация всех документов поставщика, включая сертификаты</li>
+						<li>Готовые автоматизированные отчеты, обеспечивающие комплексное представление всех данных о&nbsp;поставщике с&nbsp;консолидацией всех относящихся расходов</li>
+						<li>Автоматизированные уведомления на&nbsp;инструментальной панели и&nbsp;в&nbsp;системах KPI при выявлении выходящих за&nbsp;пределы оценок</li>
 					</ul>
 				</div>
-				<div class="container container--large mb-56">
-					<div class="mediaContent"><img class="object-fit-js" src="img/article-img-2.jpg" alt="" loading="lazy"/>
-					</div><span>Description</span>
+				<div class="container container--small mb-56">
+					<h3 class="sContent__list-title">Выгоды для бизнеса
+					</h3>
+					<ul class="sContent__list">
+						<li>Повышение надежности и эффективности поставщиков</li>
+						<li>Сотрудничество с лучшими поставщиками</li>
+						<li>Снижение операционных затрат на процесс около 11%</li>
+					</ul>
 				</div>
 				<div class="container container--small mb-56">
-					<h6 class="mb-32">H6 Header two line words description</h6>
-						<div class="sContent__tableWrap">
-							<table>
-								<thead>
-									<tr>
-										<th scope="col">Maecenas</th>
-										<th scope="col">Phasellus</th>
-										<th scope="col">Gravida</th>
-										<th scope="col">Integer</th>
-									</tr>
-								</thead>
-								<tbody>
-										<tr>
-											<td scope="row">Nullam</td>
-											<td>Tincidunt</td>
-											<td>Tincidunt</td>
-											<td>Dapibus</td>
-										</tr>
-										<tr>
-											<td scope="row">Luctus</td>
-											<td>Mauris</td>
-											<td>Felis</td>
-											<td>Aenean</td>
-										</tr>
-										<tr>
-											<td scope="row">Dignissim</td>
-											<td>Vestibulum</td>
-											<td>Fusce</td>
-											<td>Donec</td>
-										</tr>
-								</tbody>
-							</table>
-						</div>
-				</div>
-				<div class="container container--large container--indent">
-					<blockquote>
-						<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</h4>
-						<cite>Алексей Литвин<span>Директор</span></cite>
-					</blockquote>
-				</div>
-				<div class="container container--small mb-32">
-					<h3 class="mb-32">H3 Header two line words description</h3>
-					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
+					<h3 class="sContent__list-title">Как это работает
+					</h3>
+					<div class="sContent__list-text">Автоматизация на&nbsp;базе продукта SAP ARIBA SLP (Supplier Lifecycle and Performance). Является облачным решением.
+					</div>
+					<ul class="sContent__list">
+						<li>Внедрение облачного решения Ariba SLP не&nbsp;требует обширных инвестиций и&nbsp;значительного времени</li>
+						<li>Интеграция с&nbsp;бизнес-сетью Ариба</li>
+						<li>Возможность использования преднастроенных бизнес-процессов</li>
+						<li>Процесс управления поставщиками интегрирован в end-to-end процесс закупок</li>
+						<li>Повышение эффективности операционной деятельности департамента закупки за&nbsp;счет вовлечения поставщиков</li>
+						<li>Полный обзор деятельности поставщика в&nbsp;профиле 360</li>
+						<li>Возможность подключения с мобильных устройств</li>
+					</ul>
 				</div>
 				<div class="container container--small mb-56">
-					<ol class="sContent__num-list">
-						<li>Nam luctus orci non suscipit mollis</li>
-						<li>Proin suscipit placerat turpis, vitae fermentum turpis auctor vel
-							<ol>
-								<li>Donec scelerisque massa nec sapien tempus consectetur</li>
-								<li>Morbi vehicula mauris neque</li>
-							</ol>
-						</li>
-						<li>Quisque aliquet nibh nec egestas faucibus</li>
-					</ol>
+					<h3 class="sContent__list-title">Преимущества работы с SAPRUN
+					</h3>
+					<ul class="sContent__list">
+						<li>Наличие сертифицированных консультантов, которые обладают опытом и&nbsp;знаниями для успешного развертывания решения.</li>
+						<li>Использование опыта (ноу-хау) наших предыдущих проектов</li>
+					</ul>
 				</div>
 				<div class="container container--small mb-56">
-					<div class="sContent__sliderContainer">
-						<div class="sContent__slider sContent__slider--js swiper">
-							<div class="swiper-wrapper">
-									<div class="sContent__slide swiper-slide">
-										<div class="sContent__item"><img class="object-fit-js" src="img/article-img-3.jpg" alt="" loading="lazy"/>
-										</div>
-									</div>
-									<div class="sContent__slide swiper-slide">
-										<div class="sContent__item"><img class="object-fit-js" src="img/article-img-3.jpg" alt="" loading="lazy"/>
-										</div>
-									</div>
-									<div class="sContent__slide swiper-slide">
-										<div class="sContent__item"><img class="object-fit-js" src="img/article-img-3.jpg" alt="" loading="lazy"/>
-										</div>
-									</div>
-							</div>
-						</div>
-						<div class="sContent__arrow-wrap">
-							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
-								<svg class="icon icon-chevron-left ">
-									<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
-								</svg>
-							</div>
-							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
-								<svg class="icon icon-chevron-right ">
-									<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-								</svg>
-							</div>
-						</div>
+					<h3 class="sContent__list-title">Успешные внедрения
+					</h3>
+					<ul class="sContent__list">
+					</ul>
+					<div class="sContent__list-text"><a href="#">Bank of Georgia</a> &laquo;Внедрение системы управления поставщиками&raquo; (ссылка<br>на&nbsp;соответствующий кейс)
 					</div>
 				</div>
-				<div class="container container--small pb-32">
+				<div class="container container--small mb-56">
 					<div class="share-block">
 						<p>Поделиться</p>
 						<div class="soc">
@@ -367,10 +304,10 @@
 									<svg class="icon icon-arrow-right-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
+								</div><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
+								<div class="sService__caption">Построение автоматизированной системы распределения операционных расходов
 								</div>
-								<div class="sService__title">12 сентября 2022
-								</div>
-								<div class="sService__caption">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.
+								<div class="sService__subtext">Финансы, Управление цепочками поставок
 								</div>
 							</a>
 						</div>
@@ -380,10 +317,10 @@
 									<svg class="icon icon-arrow-right-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
+								</div><img src="img/svg/trans.svg" alt="" loading="lazy"/>
+								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
 								</div>
-								<div class="sService__title">6 сентября 2022
-								</div>
-								<div class="sService__caption">Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.
+								<div class="sService__subtext">Финансы, Управление цепочками поставок
 								</div>
 							</a>
 						</div>
