--- a/public/09-subspecies-services.html
+++ b/public/09-subspecies-services.html
@@ -328,6 +328,27 @@
 				</div>
 			</section>
 			<!-- end sService-->
+			<!-- start sService-->
+			<section class="sService sService--2 section bg-white" id="sService">
+				<div class="container container--small">
+					<div class="row">
+						<div class="col-md">
+							<a class="sService__item sService__item--single" href="#">
+								<div class="sService__link sService__link--single">
+									<svg class="icon icon-arrow-right-link ">
+										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+									</svg>
+								</div><img src="img/svg/trans.svg" alt="" loading="lazy"/>
+								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
+								</div>
+								<div class="sService__subtext">Финансы, Управление цепочками поставок
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sService-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
