edit 11-case page

--- a/public/11-case.html
+++ b/public/11-case.html
@@ -197,10 +197,10 @@
 			</div>
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
-			<div class="headerBlock headerBlock--artical bg-wrap section bg-dark" id="headerBlock">
+			<div class="headerBlock headerBlock--artical bg-wrap section bg-white" id="headerBlock">
 				<div class="headerBlock__row row">
 					<div class="col-md-6 order-2 order-md-1">
-						<div class="headerBlock__img-wrap"><img class="object-fit-js" src="img/article-img-4.jpg" alt="" loading="lazy"/>
+						<div class="headerBlock__img-wrap"><img class="object-fit-js" src="img/article-img-5.jpg" alt="" loading="lazy"/>
 						</div>
 						<div class="headerBlock__tags d-flex d-md-none"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
 						</div>
@@ -213,11 +213,13 @@
 						<a class="headerBlock__back mb-32" href="#">
 							<svg class="icon icon-chevron-left ">
 								<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
-							</svg>Вернуться к услугам
+							</svg>Вернуться к проектам
 						</a>
-						<div class="headerBlock__content headerBlock__content--2">
-							<h1>Управление поставщиками</h1>
-							<p>Автоматизация процессов регистрации, квалификации, сегментации, а&nbsp;также контроль эффективности поставщиков. Управление данными о&nbsp;поставщиках, их&nbsp;KPI, финансовой документацией, сертификатами и&nbsp;прочей информацией.</p>
+						<div class="headerBlock__content headerBlock__content--3"><img src="img/svg/Infinbank.svg" alt="" loading="lazy"/>
+							<div class="h6">банки</div>
+							<h1>Программа проектов «Реновация» цифровой трансформации банка InfinBank</h1><a class="btn btn-outline-primary" href="#">Запросить детали проекта</a>
+						</div>
+						<div class="headerBlock__desc">Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт
 						</div>
 						<div class="headerBlock__tags d-none d-md-flex"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
 						</div>
@@ -303,27 +305,6 @@
 						<div class="col-md">
 							<a class="sService__item" href="#">
 								<div class="sService__link sService__link--right">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div><img src="img/svg/trans.svg" alt="" loading="lazy"/>
-								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
-								</div>
-								<div class="sService__subtext">Финансы, Управление цепочками поставок
-								</div>
-							</a>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- end sService-->
-			<!-- start sService-->
-			<section class="sService sService--2 section bg-white" id="sService">
-				<div class="container container--small">
-					<div class="row">
-						<div class="col-md">
-							<a class="sService__item sService__item--single" href="#">
-								<div class="sService__link sService__link--single">
 									<svg class="icon icon-arrow-right-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
