--- a/public/11-case.html
+++ b/public/11-case.html
@@ -197,7 +197,7 @@
 			</div>
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
-			<div class="headerBlock headerBlock--artical bg-wrap section bg-white" id="headerBlock">
+			<div class="headerBlock headerBlock--artical bg-wrap section bg-white section section--vh" id="headerBlock">
 				<div class="headerBlock__row row">
 					<div class="col-md-6 order-2 order-md-1">
 						<div class="headerBlock__img-wrap"><img class="object-fit-js" src="img/article-img-5.jpg" alt="" loading="lazy"/>
@@ -226,58 +226,75 @@
 					</div>
 				</div>
 			</div>
-			<section class="sContent section bg-white section section--vh" id="sContent">
+			<section class="sContent sContent--4 section bg-white section section--vh" id="sContent">
 				<div class="container container--small mb-56">
-					<h3 class="sContent__list-title">Возможности решения
+					<h4>Donec pellentesque efficitur dui, id dictum ex aliquam id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a sed est.</h4>
+				</div>
+				<div class="container container--small mb-72">
+					<div class="sContent__row row">
+						<div class="col-md-4">
+							<div class="sContent__item">
+								<h2>№1</h2>
+								<p>Первое внедрение SAP в&nbsp;банковском секторе Узбекистана. Проект-победитель SAP Quality Awords 2017</p>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="sContent__item">
+								<h2>220+</h2>
+								<p>Источников информации из&nbsp;систем и&nbsp;подразделений банка объединено в&nbsp;КХД</p>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="sContent__item">
+								<h2>400</h2>
+								<p>Количество пользователей единой системы</p>
+							</div>
+						</div>
+					</div>
+					<div class="sContent__row-second row">
+						<div class="col-md-6">
+							<div class="sContent__item">
+								<h2>№1</h2>
+								<p>Первое внедрение SAP в&nbsp;банковском секторе Узбекистана. Проект-победитель SAP Quality Awords 2017</p>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="sContent__item">
+								<h2>220+</h2>
+								<p>Источников информации из&nbsp;систем и&nbsp;подразделений банка объединено в&nbsp;КХД</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="container container--small mb-56">
+					<h3 class="sContent__list-title">Функциональный объем
 					</h3>
 					<ul class="sContent__list">
-						<li>Регистрация, квалификация и&nbsp;дисквалификация поставщиков</li>
-						<li>Регистрация, квалификация и&nbsp;дисквалификация поставщиков</li>
-						<li>Процесс классификации поставщиков по&nbsp;товарам, регионам и&nbsp;бизнес-подразделениям на&nbsp;основе сегментационной матрицы</li>
-						<li>Фиксация всех документов поставщика, включая сертификаты</li>
-						<li>Готовые автоматизированные отчеты, обеспечивающие комплексное представление всех данных о&nbsp;поставщике с&nbsp;консолидацией всех относящихся расходов</li>
-						<li>Автоматизированные уведомления на&nbsp;инструментальной панели и&nbsp;в&nbsp;системах KPI при выявлении выходящих за&nbsp;пределы оценок</li>
+						<li>Хранилище данных SAP BW</li>
+						<li>SAP CRM</li>
+						<li>Кредитный конвейер PEGA</li>
+						<li>Визуализация КПЭ SAP BO Design Studio</li>
+						<li>Детальная отчетность SAP BO Web intelliegence</li>
 					</ul>
 				</div>
 				<div class="container container--small mb-56">
-					<h3 class="sContent__list-title">Выгоды для бизнеса
+					<h3 class="sContent__list-title">Сроки проекта
 					</h3>
-					<ul class="sContent__list">
-						<li>Повышение надежности и эффективности поставщиков</li>
-						<li>Сотрудничество с лучшими поставщиками</li>
-						<li>Снижение операционных затрат на процесс около 11%</li>
-					</ul>
-				</div>
-				<div class="container container--small mb-56">
-					<h3 class="sContent__list-title">Как это работает
-					</h3>
-					<div class="sContent__list-text">Автоматизация на&nbsp;базе продукта SAP ARIBA SLP (Supplier Lifecycle and Performance). Является облачным решением.
+					<div class="sContent__list-text">Март 2017 — Февраль 2018
 					</div>
 					<ul class="sContent__list">
-						<li>Внедрение облачного решения Ariba SLP не&nbsp;требует обширных инвестиций и&nbsp;значительного времени</li>
-						<li>Интеграция с&nbsp;бизнес-сетью Ариба</li>
-						<li>Возможность использования преднастроенных бизнес-процессов</li>
-						<li>Процесс управления поставщиками интегрирован в end-to-end процесс закупок</li>
-						<li>Повышение эффективности операционной деятельности департамента закупки за&nbsp;счет вовлечения поставщиков</li>
-						<li>Полный обзор деятельности поставщика в&nbsp;профиле 360</li>
-						<li>Возможность подключения с мобильных устройств</li>
 					</ul>
 				</div>
-				<div class="container container--small mb-56">
-					<h3 class="sContent__list-title">Преимущества работы с SAPRUN
+				<div class="container container--small">
+					<h3 class="sContent__list-title">Достигнутые результаты
 					</h3>
 					<ul class="sContent__list">
-						<li>Наличие сертифицированных консультантов, которые обладают опытом и&nbsp;знаниями для успешного развертывания решения.</li>
-						<li>Использование опыта (ноу-хау) наших предыдущих проектов</li>
+						<li>Сокращено до&nbsp;5&nbsp;раз время выдачи кредитов клиентам банка</li>
+						<li>Данные из&nbsp;220 систем-источников поступают в&nbsp;Корпоративное хранилище данных</li>
+						<li>Новая SAP CRM позволила объединить более 600 тыс клиентов всех подразделений банка в&nbsp;единой системе</li>
+						<li>Получение отчетности о&nbsp;ключевых показателях деятельности банка в&nbsp;режиме &laquo;день в&nbsp;день&raquo;: более 40&nbsp;оперативных управленческих отчетов, включающих свыше 170 показателей (до&nbsp;внедрения&nbsp;70% отчетов формировалось с&nbsp;задержкой 1-2&nbsp;недели)</li>
+						<li>Время на&nbsp;обработку обращений клиентов сокращено до&nbsp;3&nbsp;рабочих дней за&nbsp;счет создания колл-центра</li>
 					</ul>
-				</div>
-				<div class="container container--small pb-56">
-					<h3 class="sContent__list-title">Успешные внедрения
-					</h3>
-					<ul class="sContent__list">
-					</ul>
-					<div class="sContent__list-text"><a href="#">Bank of Georgia</a> &laquo;Внедрение системы управления поставщиками&raquo; (ссылка<br>на&nbsp;соответствующий кейс)
-					</div>
 				</div>
 			</section>
 			<!-- start sService-->
