--- a/public/07-service-2.html
+++ b/public/07-service-2.html
@@ -535,6 +535,16 @@
 				</div>
 			</section>
 			<!-- end sTechnology-->
+			<!-- start sHistory-->
+			<section class="sHistory bg-dark section section--vh" id="sHistory">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>sHistory</h2>
+					</div>
+					<div class="row"></div>
+				</div>
+			</section>
+			<!-- end sHistory-->
 			<!-- start sService-->
 			<section class="sService section bg-white" id="sService">
 				<div class="container">
