--- a/public/02-about.html
+++ b/public/02-about.html
@@ -319,8 +319,38 @@
 				</div>
 			</section>
 			<!-- end sStatus-->
+			<!-- start sCaptionBlock-->
+			<section class="sCaptionBlock bg-white" id="sCaptionBlock">
+				<!-- picture-->
+				<picture> 
+					<source type="image/webp" srcset="img/@2x/webp/caption-block-about.webp"/><img src="img/@2x/caption-block-about.jpg" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
+				<div class="sCaptionBlock__wrap">
+					<h2>Рейтинги</h2>
+					<div class="sCaptionBlock__item">
+						<div class="sCaptionBlock__item-title">TOP 10
+						</div>
+						<div class="sCaptionBlock__item-caption">Крупнейших поставщиков BI-систем в&nbsp;России по&nbsp;версии аналитического агентства TAdviser
+						</div>
+					</div>
+					<div class="sCaptionBlock__item">
+						<div class="sCaptionBlock__item-title">TOP 5
+						</div>
+						<div class="sCaptionBlock__item-caption">Крупнейших аутсорсеров поддержки систем SAP в&nbsp;России по&nbsp;версии аналитического агентства TAdviser
+						</div>
+					</div>
+					<div class="sCaptionBlock__item">
+						<div class="sCaptionBlock__item-title">TOP 5
+						</div>
+						<div class="sCaptionBlock__item-caption">Крупнейших аутсорсеров поддержки систем SAP в&nbsp;России по&nbsp;версии аналитического агентства TAdviser
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sCaptionBlock-->
 			<!-- start sForm-->
-			<section class="sForm section bg-dark section section--vh" id="sForm">
+			<section class="sForm section bg-dark" id="sForm">
 				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
 				<div class="container">
 					<div class="form-wrap">
