--- a/public/04-press-center.html
+++ b/public/04-press-center.html
@@ -659,6 +659,22 @@
 				</div>
 			</section>
 			<!-- end sEventsList-->
+			<!-- start sCaptionBlock-->
+			<section class="sCaptionBlock bg-white" id="sCaptionBlock">
+				<!-- picture-->
+				<picture> 
+					<source type="image/webp" srcset="img/@2x/webp/caption-block-press.webp"/><img src="img/@2x/caption-block-press.jpg" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
+				<div class="sCaptionBlock__wrap">
+					<h2>Контакты PR-службы</h2>
+					<a class="sCaptionBlock__link-soc" href="tel:+74956637759">+7 495 663 7759
+					</a>
+					<a class="sCaptionBlock__link-soc" href="mailto:info@saprun.com">info@saprun.com
+					</a>
+				</div>
+			</section>
+			<!-- end sCaptionBlock-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
