--- a/public/05-work.html
+++ b/public/05-work.html
@@ -458,6 +458,24 @@
 				</div>
 			</section>
 			<!-- end sWorkConditions-->
+			<!-- start sCaptionBlock-->
+			<section class="sCaptionBlock sCaptionBlock--work bg-white" id="sCaptionBlock">
+				<!-- picture-->
+				<picture> 
+					<source type="image/webp" srcset="img/@2x/webp/caption-block-work.webp"/><img src="img/@2x/caption-block-work.jpg" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
+				<div class="sCaptionBlock__wrap">
+					<h2>Стажировка в Saprun</h2>
+					<p>Стажерские программы&nbsp;&mdash; это отличная возможность для выпускников ВУЗов начать карьеру в&nbsp;САПРАН. Наших стажеров обучают лучшие эксперты компании. После обучения у&nbsp;них есть возможность сразу влиться в&nbsp;реальные проекты для ведущих российских компаний.</p>
+					<a class="sCaptionBlock__link" href="#"><span>Стажировка в SAPRUN</span>
+						<svg class="icon icon-arrow-right-link ">
+							<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+						</svg>
+					</a>
+				</div>
+			</section>
+			<!-- end sCaptionBlock-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
