--- a/public/15-search-result.html
+++ b/public/15-search-result.html
@@ -398,13 +398,7 @@
 									<a class="sSearchResult__reference h4" href="#">Программа проектов «Реновация» цифровой трансформации банка InfinBank
 									</a>
 									<p>Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт</p><img class="subTextImg" src="img/svg/Infinbank-black.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
@@ -421,13 +415,7 @@
 									<a class="sSearchResult__reference h4" href="#">Управление программой IT-деятельности компании на&nbsp;базе SAP BPC&nbsp;NW
 									</a>
 									<p>Взаимоотношения с клиентами и клиентский опыт</p><img class="subTextImg" src="img/svg/trans.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
@@ -1238,13 +1226,7 @@
 									<a class="sSearchResult__reference h4" href="#">Программа проектов «Реновация» цифровой трансформации банка InfinBank
 									</a>
 									<p>Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт</p><img class="subTextImg" src="img/svg/Infinbank-black.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
@@ -1261,13 +1243,7 @@
 									<a class="sSearchResult__reference h4" href="#">Управление программой IT-деятельности компании на&nbsp;базе SAP BPC&nbsp;NW
 									</a>
 									<p>Взаимоотношения с клиентами и клиентский опыт</p><img class="subTextImg" src="img/svg/trans.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
@@ -1284,13 +1260,7 @@
 									<a class="sSearchResult__reference h4" href="#">Автоматизированная система управления ресурсами SAP ERP
 									</a>
 									<p>Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт</p><img class="subTextImg" src="img/svg/pulkovo.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
@@ -1307,13 +1277,7 @@
 									<a class="sSearchResult__reference h4" href="#">Построение автоматизированной системы распределения операционных расходов
 									</a>
 									<p>Сеть и управление расходами</p><img class="subTextImg" src="img/svg/sberbank.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
@@ -1330,13 +1294,7 @@
 									<a class="sSearchResult__reference h4" href="#">Программа проектов «Реновация» цифровой трансформации банка InfinBank
 									</a>
 									<p>Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт</p><img class="subTextImg" src="img/svg/Infinbank-black.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
@@ -1353,13 +1311,7 @@
 									<a class="sSearchResult__reference h4" href="#">Управление программой IT-деятельности компании на&nbsp;базе SAP BPC&nbsp;NW
 									</a>
 									<p>Взаимоотношения с клиентами и клиентский опыт</p><img class="subTextImg" src="img/svg/trans.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
@@ -1376,13 +1328,7 @@
 									<a class="sSearchResult__reference h4" href="#">Автоматизированная система управления ресурсами SAP ERP
 									</a>
 									<p>Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт</p><img class="subTextImg" src="img/svg/pulkovo.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
@@ -1399,13 +1345,7 @@
 									<a class="sSearchResult__reference h4" href="#">Построение автоматизированной системы распределения операционных расходов
 									</a>
 									<p>Сеть и управление расходами</p><img class="subTextImg" src="img/svg/sberbank.svg" alt="" loading="lazy"/>
-									<div class="sSearchResult__wrap">
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
-										<div class="sSearchResult__tag">#новости команды
-										</div>
-										<div class="sSearchResult__tag">#жизнь компании
-										</div>
+									<div class="sSearchResult__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a>
 									</div>
 								</div>
 								<div class="col order-1 order-md-2">
