--- a/public/02-about.html
+++ b/public/02-about.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
+		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
 	<body>
@@ -205,8 +206,12 @@
 				</div>
 				<div class="container">
 					<div class="headerBlock__inner">
-						<h1>О нас</h1>
-						<p>Группа компаний САПРАН специализируется на&nbsp;внедрении ИТ-решений для бизнеса на&nbsp;платформе SAP</p>
+						<div class="headerBlock__title-block" data-aos="fade-up" data-aos-delay="300">
+							<h1>О нас</h1>
+						</div>
+						<div class="headerBlock__text-block" data-aos="fade-up" data-aos-delay="500">
+							<p>Группа компаний САПРАН специализируется на&nbsp;внедрении ИТ-решений для бизнеса на&nbsp;платформе SAP</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -291,27 +296,27 @@
 					<div class="status-block">
 						<div class="status-block__wrap">
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-1.svg" alt=""/>
+								<a class="status-block__status-pic" href="#" data-aos="fade-up" data-aos-delay="200"><img src="img/svg/status-1.svg" alt=""/>
 								</a>
 							</div>
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-2.svg" alt=""/>
+								<a class="status-block__status-pic" href="#" data-aos="fade-up" data-aos-delay="400"><img src="img/svg/status-2.svg" alt=""/>
 								</a>
 							</div>
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-3.svg" alt=""/>
+								<a class="status-block__status-pic" href="#" data-aos="fade-up" data-aos-delay="600"><img src="img/svg/status-3.svg" alt=""/>
 								</a>
 							</div>
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-4.svg" alt=""/>
+								<a class="status-block__status-pic" href="#" data-aos="fade-up" data-aos-delay="800"><img src="img/svg/status-4.svg" alt=""/>
 								</a>
 							</div>
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-5.svg" alt=""/>
+								<a class="status-block__status-pic" href="#" data-aos="fade-up" data-aos-delay="1000"><img src="img/svg/status-5.svg" alt=""/>
 								</a>
 							</div>
 							<div class="status-block__item">
-								<a class="status-block__status-pic" href="#"><img src="img/svg/status-6.svg" alt=""/>
+								<a class="status-block__status-pic" href="#" data-aos="fade-up" data-aos-delay="1200"><img src="img/svg/status-6.svg" alt=""/>
 								</a>
 							</div>
 						</div>
