--- a/public/07-service-2.html
+++ b/public/07-service-2.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
+		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
 	<body>
@@ -205,8 +206,12 @@
 				</div>
 				<div class="container">
 					<div class="headerBlock__inner">
-						<h1>Центр прикладной разработки</h1>
-						<p>Центр прикладной разработки более 15&nbsp;лет оказывает услуги в&nbsp;части заказной разработки под всю продуктовую линейку решений SAP, а&nbsp;также в&nbsp;области прикладной и&nbsp;мобильной разработки на&nbsp;открытом стеке технологий.</p>
+						<div class="headerBlock__title-block" data-aos="fade-up" data-aos-delay="300">
+							<h1>Центр прикладной разработки</h1>
+						</div>
+						<div class="headerBlock__text-block" data-aos="fade-up" data-aos-delay="500">
+							<p>Центр прикладной разработки более 15&nbsp;лет оказывает услуги в&nbsp;части заказной разработки под всю продуктовую линейку решений SAP, а&nbsp;также в&nbsp;области прикладной и&nbsp;мобильной разработки на&nbsp;открытом стеке технологий.</p>
+						</div>
 					</div>
 				</div>
 			</div>
