--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
+		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
 	<body class="main-page page-fixed-video">
@@ -201,8 +202,12 @@
 				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
 				<div class="container">
 					<div class="headerBlock__inner">
-						<h1>Открываем для компаний <span>новые возможности</span> в&nbsp;проектах цифровой&nbsp;трансформации</h1>
-						<p>Разрабатываем и&nbsp;внедряем комплексные IT-решения  в&nbsp;области управления ресурсами предприятия</p>
+						<div class="headerBlock__title-block" data-aos="fade-up" data-aos-delay="300">
+							<h1>Открываем для компаний <span>новые возможности</span> в&nbsp;проектах цифровой&nbsp;трансформации</h1>
+						</div>
+						<div class="headerBlock__text-block" data-aos="fade-up" data-aos-delay="500">
+							<p>Разрабатываем и&nbsp;внедряем комплексные IT-решения  в&nbsp;области управления ресурсами предприятия</p>
+						</div>
 					</div>
 				</div>
 			</div>
