--- a/public/06-service.html
+++ b/public/06-service.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
+		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
 	<body>
@@ -205,8 +206,12 @@
 				</div>
 				<div class="container">
 					<div class="headerBlock__inner">
-						<h1>Технический консалтинг и поддержка</h1>
-						<p>Предоставляем услуги по&nbsp;технической поддержке, обслуживанию и&nbsp;совершенствованию ИТ-инфраструктуры малым, средним и&nbsp;крупным компаниям.</p>
+						<div class="headerBlock__title-block" data-aos="fade-up" data-aos-delay="300">
+							<h1>Технический консалтинг и поддержка</h1>
+						</div>
+						<div class="headerBlock__text-block" data-aos="fade-up" data-aos-delay="500">
+							<p>Предоставляем услуги по&nbsp;технической поддержке, обслуживанию и&nbsp;совершенствованию ИТ-инфраструктуры малым, средним и&nbsp;крупным компаниям.</p>
+						</div>
 					</div>
 				</div>
 			</div>
