--- a/public/02-about.html
+++ b/public/02-about.html
@@ -197,6 +197,95 @@
 				</div>
 			</div>
 			<!-- end top-nav-->
+			<!-- start headerBlock-->
+			<div class="headerBlock bg-wrap section bg-dark section section--vh" id="headerBlock">
+				<div class="animate-blur animate-blur--right"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockAbout-bg.jpg" alt=""/>
+				</div>
+				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockAbout-bg-mob.jpg" alt=""/>
+				</div>
+				<div class="container">
+					<div class="headerBlock__inner">
+						<div class="headerBlock__title-block" data-aos="fade-up" data-aos-delay="300">
+							<h1>О нас</h1>
+						</div>
+						<div class="headerBlock__text-block" data-aos="fade-up" data-aos-delay="500">
+							<p>Группа компаний САПРАН специализируется на&nbsp;внедрении ИТ-решений для бизнеса на&nbsp;платформе SAP</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end headerBlock-->
+			<!-- start sAboutPerson-->
+			<div class="sAboutPerson section bg-white section section--vh" id="sAboutPerson">
+				<div class="sAboutPerson__img"><img src="img/person-about.jpg" alt=""/>
+				</div>
+				<div class="sAboutPerson__text-block">
+					<h2>Миссия и ценности</h2>
+					<div class="sAboutPerson__quote">Стабильность в&nbsp;бизнесе и&nbsp;жизни не&nbsp;возможна без развития, движения вперёд. Бизнес наших клиентов постоянно меняется, и&nbsp;мы&nbsp;помогаем им&nbsp;в&nbsp;этом. Наша роль&nbsp;&mdash; придать энергии этим изменениям, запустить&nbsp;их. Для этого нас и&nbsp;выбирают. Поэтому SAPRUN&nbsp;&mdash; это энергия изменений
+					</div>
+					<div class="sAboutPerson__sign"><img src="img/sign.png" alt=""/>
+					</div>
+					<div class="sAboutPerson__name">Созинов Сергей
+					</div>
+					<div class="sAboutPerson__job">Генеральный директор
+					</div>
+				</div>
+			</div>
+			<!-- end sAboutPerson-->
+			<!-- start sAboutCaption-->
+			<section class="sAboutCaption section bg-white section section--vh" id="sAboutCaption">
+				<div class="container">
+					<div class="section-title">
+						<h2>Стабильность требует изменений</h2>
+						<div class="sAboutCaption__sub-title">Помогаем компаниям в проектах цифровой трансформации
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="sAboutCaptionItem">
+								<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-1.svg" alt=""/>
+								</div>
+								<div class="sAboutCaptionItem__title">Профессионализм
+								</div>
+								<div class="sAboutCaptionItem__text">Профессионализм лежит в&nbsp;основе нашей стабильности&nbsp;&mdash; мы&nbsp;знаем, как подойти к&nbsp;решению нестандартных задач и&nbsp;обеспечить неизменно высокий результат в&nbsp;меняющихся условиях. Все наши достижения&nbsp;&mdash; результат многолетней работы и&nbsp;мы&nbsp;гордимся&nbsp;ею.
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="sAboutCaptionItem">
+								<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-2.svg" alt=""/>
+								</div>
+								<div class="sAboutCaptionItem__title">Командность
+								</div>
+								<div class="sAboutCaptionItem__text">Командность вдохновляет нас на&nbsp;результаты выше ожиданий&nbsp;&mdash; умеем работать в&nbsp;команде, соблюдать баланс командных и&nbsp;личных интересов, поддерживать и&nbsp;ценить друг друга, выбирать лучшее решение вне зависимости от&nbsp;того,кому оно принадлежит. Мы&nbsp;стремимся создать атмосферу комфорта и&nbsp;доверия&nbsp;&mdash; в&nbsp;компании, в&nbsp;проектах, в&nbsp;партнерстве с&nbsp;клиентами.
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="sAboutCaptionItem">
+								<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-3.svg" alt=""/>
+								</div>
+								<div class="sAboutCaptionItem__title">Открытость
+								</div>
+								<div class="sAboutCaptionItem__text">Открытость дает нам возможность мыслить масштабно, без границ&nbsp;&mdash; быть открытыми новым технологиям и&nbsp;мнениям,находить незаурядные решения, открыто делиться знаниями с&nbsp;коллегами, клиентами, партнерами. Мы&nbsp;любим инновации и&nbsp;следуем&nbsp;им.
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="sAboutCaptionItem">
+								<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-4.svg" alt=""/>
+								</div>
+								<div class="sAboutCaptionItem__title">Ответственность
+								</div>
+								<div class="sAboutCaptionItem__text">Ответственность определяет наш образ мыслей и&nbsp;поступки&nbsp;&mdash; мы&nbsp;умеем брать ответственность за&nbsp;собственные действия и&nbsp;общий результат, ответственно подходим к&nbsp;исполнению обязательств и&nbsp;договоренностей, дорожим репутацией и&nbsp;ценим долголетнее партнерство. Исходим из&nbsp;принципа &laquo;успех наших клиентов&nbsp;&mdash; наш успех&raquo;.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sAboutCaption-->
 			<!-- start sTeam-->
 			<section class="sTeam section bg-dark section section--vh" id="sTeam">
 				<div class="container">
